kubernetes/apps/kyverno/kyverno/policies/allow-only-vault-provider.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-secretstore-vault-provider
spec:
  validationFailureAction: Enforce
  rules:
  - name: require-secretstore-vault-provider
    match:
      any:
      - resources:
          kinds:
          - SecretStore
          - ClusterSecretStore
    validate:
      message: "You must only use Hashicorp Vault SecretsStore"
      pattern:
        spec:
          provider:
            vault:
              auth:
                kubernetes:
                  role: external-secrets-operator
